--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 
 # Ignore all environment files (except templates).
 /.env*
-!/.env*.erb
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -36,3 +35,5 @@
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
+.env*
+.env*
